<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/Layout"
    tools:context="com.smol.inz.pojednejnutce.view.HomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/coin"
            android:layout_gravity="center"/>
    <TextView
        android:id="@+id/user_score"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            style="@style/Logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--FrameLayout for touch Effect-->
            <FrameLayout
                android:id="@+id/play_frame"
                style="@style/ButtonWrapper"
                android:layout_marginTop="@dimen/new_game_margin_top_main">
                <Button
                    android:id="@+id/button_play"
                    style="@style/Button"
                    android:text="@string/play"
                    android:shadowRadius="5"/>
            </FrameLayout>

            <!--FrameLayout for touch Effect-->
            <FrameLayout
                android:id="@+id/ranking_frame"
                android:layout_below="@id/play_frame"
                style="@style/ButtonWrapper"
                android:layout_marginTop="@dimen/new_game_margin_top_main">
                <Button
                    android:id="@+id/button_ranking"
                    style="@style/Button"
                    android:text="@string/ranking"
                    android:shadowRadius="5"/>
            </FrameLayout>

            <!--FrameLayout for touch Effect-->
            <FrameLayout
                android:id="@+id/exit_button_frame"
                style="@style/ButtonWrapper"
                android:layout_below="@id/ranking_frame"
                android:layout_marginTop="@dimen/exit_margin_top_main"
                >

                <Button
                    android:id="@+id/button_logout"
                    style="@style/Button"
                    android:text="@string/logout"
                    android:shadowRadius="5"/>
            </FrameLayout>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>