<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_categories"
    style="@style/Layout"
    tools:context="com.smol.inz.pojednejnutce.view.CategoryActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/coin"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/user_score"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            style="@style/Logo.Smaller" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_category"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--FrameLayout for touch Effect-->
            <FrameLayout
                android:id="@+id/pop_category_frame"
                style="@style/ButtonWrapper"
                android:layout_marginTop="@dimen/new_game_margin_top_main">
                <Button
                    android:id="@+id/button_pop_category"
                    style="@style/Button"
                    android:text="@string/pop"
                    android:shadowRadius="5"/>
            </FrameLayout>

            <!--FrameLayout for touch Effect-->
            <FrameLayout
                android:id="@+id/rock_category_frame"
                android:layout_below="@id/pop_category_frame"
                style="@style/ButtonWrapper"
                android:layout_marginTop="@dimen/new_game_margin_top_main">
                <Button
                    android:id="@+id/button_rock_category"
                    style="@style/Button"
                    android:text="@string/rock"
                    android:shadowRadius="5"/>
            </FrameLayout>

            <!--FrameLayout for touch Effect-->
            <FrameLayout
                android:id="@+id/hiphop_category_frame"
                android:layout_below="@id/rock_category_frame"
                style="@style/ButtonWrapper"
                android:layout_marginTop="@dimen/new_game_margin_top_main">
                <Button
                    android:id="@+id/button_hiphop_category"
                    style="@style/Button"
                    android:text="hip-hop"
                    android:shadowRadius="5"/>
            </FrameLayout>


        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>